Made better responsive windows

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,7 +5,7 @@
 
 body {
     background-color: #010a01;
-    background-image: url(https://w.forfun.com/fetch/4a/4a245a9787bc42a3d05c50cc647751cf.jpeg)
+    background-image: url(https://w.forfun.com/fetch/4a/4a245a9787bc42a3d05c50cc647751cf.jpeg);
     align-items: center;
 }
 
