--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20,10 +20,9 @@ body {
                 1em 1em .4em .2em #000; 
 }
 
-
 .pokedex-title {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1rem;
@@ -37,6 +36,11 @@ body {
                 1em 1em .4em .2em #000; 
 
     background-image: url(https://media.istockphoto.com/id/1249047896/de/vektor/abstrakte-blaue-leuchten-hintergrund-mit-lichtern-strahl-hintergrund.jpg?s=612x612&w=0&k=20&c=14p36GC2-5F2q-yU4vIX5gv0agXcUbhDwT7gzaPItZk=);
+}
+
+.subtitle {
+    width: 250px;
+    height: auto;
 }
 
 .content {
