--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -15,6 +15,7 @@
     box-sizing: border-box;
     position: relative;
     width: 220px;
+    cursor: pointer;
 
     border: .1em solid white;
     box-shadow: inset 0 0 0 .1em #9d00ff,
@@ -26,8 +27,8 @@
                 1em 1em .4em .2em #000;                
 }
 
-a:hover {
-  opacity: 0.9;
+.pokemon:hover {
+  transform: scale(1.05);
 }
 
 .normal {
