--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,6 +10,11 @@ body {
 }
 
  section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     border: .1em solid white;
     box-shadow: inset 0 0 0 .1em #ff4da6,
                 inset 0 0 .1em .1em #ff4da6,
@@ -25,8 +30,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
-    margin: 1.5rem 1.5rem 2.5rem 1.5rem;
+    width: auto;
+    padding: 0 3.25rem;
+    margin: 1.5rem 1.5rem 1.5rem 1.5rem;
     border: none;
     border-radius: 2.5rem;      
     box-shadow: inset 0 0 0 .1em #1F51FF,
